# prepare_scnn

fcn_segmentation/: CMakeLists.txt  ReadMe.md  package.xml
fcn_segmentation/include/fcn_segmentation/: fcn_segmentation.hpp
fcn_segmentation/launch/: fcn_segmentation_launch.py  fcn_segmentation_rviz_launch.py
fcn_segmentation/params/: fcn_segmentation.yaml
fcn_segmentation/rviz/: fcn_segmentation.rviz
fcn_segmentation/src/: fcn_segmentation.cpp  fcn_segmentation_node.cpp
fcn_torch_backend/: CMakeLists.txt  ReadMe.md  package.xml
fcn_torch_backend/cmake/: Config.cmake  ModelGeneration.cmake  TestingSetup.cmake
fcn_torch_backend/include/fcn_torch_backend/: config.hpp  fcn_torch_backend.hpp
fcn_torch_backend/script/: export_fcn_to_pt.py
fcn_torch_backend/src/: fcn_torch_backend.cpp
fcn_torch_backend/test/: test_fcn_torch_backend.cpp
fcn_trt_backend/: CMakeLists.txt  ReadMe.md  package.xml
fcn_trt_backend/cmake/: Config.cmake
fcn_trt_backend/include/fcn_trt_backend/: fcn_trt_backend.hpp
fcn_trt_backend/script/: export_fcn_to_onnx.py
fcn_trt_backend/test/: test_fcn_trt_backend.cpp
scnn_torch/: ReadMe.md  pyproject.toml
scnn_torch/scnn_torch/: __init__.py
scnn_torch/scnn_torch/engine/: evaluator.py  trainer.py
scnn_torch/tools/: compute_mean_std.py  evaluate.py  test.py  train.py
scnn_trt_backend/: ReadMe.md
