[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scnn_torch"
version = "0.1.0"
description = "SCNN Lane Detection in PyTorch"
readme = "ReadMe.md"
license = {text = "MIT"}
authors = [
    {name = "chris7462", email = "chris7462@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
]

[project.optional-dependencies]
train = [
    "albumentations",
    "pyyaml",
    "matplotlib",
    "scipy",
]

[tool.setuptools.packages.find]
include = ["scnn_torch*"]
